vbnc/vbnc/tests/Errors/32050.vb
Module ArgumentTypeInference
    Sub a(Of T)(ByVal b As Integer)
        a(1)
    End Sub
End Module